# semanticembed-sdk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-FAQ.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
agent/: README.md  __init__.py  __main__.py  agent.py  gemini_agent.py
docs/: api_reference.md  dimensions.md  getting_started.md  input_format.md  license_keys.md  output_format.md  validation_methodology.md
examples/: README.md  ai_agent_pipeline.json  autogen_codereview.py  cicd_pipeline.json  langgraph_research_agent.py  sample_pipeline.json  weaveworks_sock_shop.json
examples/react/: README.md  RadarChart.tsx  RiskTable.tsx  TopologySummary.tsx  useSemanticEmbed.ts
huggingface/: .gitignore  DEPLOY.md  README.md  app.py  build.sh  requirements.txt  smoke_test_phase_b.py  smoke_test_phase_c.py
huggingface/examples/: autogen_codereview_after.py  boutique.json  boutique_after.json  crewai_content.py  crewai_content_after.py  langgraph_research_after.py
notebooks/: 01_quickstart.ipynb  02_dimensions.ipynb  03_drift_detection.ipynb  04_bring_your_own.ipynb  05_ai_agent_pipelines.ipynb  06_cicd_pipelines.ipynb  07_opentelemetry.ipynb  08_qwen_compression.ipynb  09_quantum_reachability.ipynb  qwen_compression_cookbook.py
skill/: SETUP.md  SKILL.md  analyze.py
src/semanticembed/: __init__.py  client.py  dedupe.py  exceptions.py  explain.py  extract.py  find_edges.py  live.py  models.py
tests/: test_aclient.py  test_client.py  test_dedupe.py  test_extract.py  test_extract_ai.py  test_extract_iac.py  test_extract_otel.py  test_live.py  test_skill.py
tests/fixtures/: autogen_app.py  cdk_app.py  crewai_app.py  docker-compose.yml  langgraph_app.py  (+5 more)
(+2 files in other folders)
