[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semanticembed"
version = "0.7.2"
description = "6D structural intelligence for directed graphs. Six numbers per node. Sub-millisecond."
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.9"
authors = [
    {name = "Jeff Murray", email = "jeffmurr@seas.upenn.edu"},
]
keywords = ["graph", "microservices", "structural-analysis", "observability", "risk-detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
extract = ["pyyaml>=6.0"]
agent-claude = ["claude-agent-sdk", "pyyaml>=6.0"]
agent-gemini = ["google-genai", "pyyaml>=6.0"]
all = ["pyyaml>=6.0", "claude-agent-sdk", "google-genai"]
dev = ["pytest>=7", "respx>=0.20", "pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/jmurray10/semanticembed-sdk"
Documentation = "https://github.com/jmurray10/semanticembed-sdk"
Repository = "https://github.com/jmurray10/semanticembed-sdk"

[project.scripts]
semanticembed-agent = "semanticembed.agent.agent:main"
semanticembed-gemini-agent = "semanticembed.agent.gemini_agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/semanticembed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
